<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="7dp"
        app:cardCornerRadius="10dp">

        <View
            android:id="@+id/notesPriority"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_gravity="right"
            android:layout_margin="10dp"
            android:background="@drawable/green_circle" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="6dp">

            <TextView
                android:id="@+id/notesTitle"
                android:layout_width="340dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/product_sans_regular"
                android:maxLength="16"
                android:padding="5dp"
                android:text="@string/title" />

            <TextView
                android:id="@+id/notesSubtitle"
                android:layout_width="340dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/product_sans_regular"
                android:maxLength="16"
                android:padding="5dp"
                android:text="@string/sub_title" />

            <TextView
                android:id="@+id/notesDate"
                android:layout_width="340dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/product_sans_bold"
                android:maxLength="16"
                android:padding="5dp"
                android:text="@string/date"
                android:textColor="@color/black" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>