<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/bottomSheet"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    app:layout_constraintCircleRadius="10dp">

    <View
        android:id="@+id/deleteMenuControl"
        android:layout_width="100dp"
        android:layout_height="7dp"
        android:layout_margin="10dp"
        android:background="@drawable/delete_menu_control" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:fontFamily="@font/product_sans_regular"
        android:gravity="center"
        android:text="@string/sure_delete"
        android:textColor="@color/black"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/noDeleteButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/no_delete"
        android:fontFamily="@font/product_sans_regular"
        android:gravity="center"
        android:padding="7dp"
        android:text="@string/no"
        android:textColor="@color/black"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/yesDeleteButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/yes_delete"
        android:fontFamily="@font/product_sans_regular"
        android:gravity="center"
        android:padding="7dp"
        android:text="@string/yes"
        android:textColor="@color/black"
        android:textSize="18sp" />

</LinearLayout>