<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/updateNotesLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray"
    android:orientation="vertical"
    tools:context=".Activity.InsertNotesActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <EditText
            android:id="@+id/updateTitleEditText"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:background="@drawable/white_inner_background"
            android:fontFamily="@font/product_sans_regular"
            android:hint="@string/title"
            android:maxLines="1"
            android:padding="15dp" />

        <EditText
            android:id="@+id/updateSubTitleEditText"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:background="@drawable/white_inner_background"
            android:fontFamily="@font/product_sans_regular"
            android:hint="@string/sub_title"
            android:maxLines="1"
            android:padding="15dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:fontFamily="@font/product_sans_regular"
                android:text="@string/priority"
                android:textColor="@color/black" />

            <ImageView
                android:id="@+id/updateGreenCircle"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_margin="10dp"
                android:background="@drawable/green_circle"
                app:srcCompat="@drawable/ic_baseline_done_24" />

            <ImageView
                android:id="@+id/updateYellowCircle"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_margin="10dp"
                android:background="@drawable/yellow_circle" />

            <ImageView
                android:id="@+id/updateRedCircle"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_margin="10dp"
                android:background="@drawable/red_circle" />
        </LinearLayout>

        <EditText
            android:id="@+id/updateNotesEditText"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:height="300dp"
            android:background="@drawable/white_inner_background"
            android:fontFamily="@font/product_sans_regular"
            android:gravity="top"
            android:hint="@string/note"
            android:padding="15dp" />
    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/updateNotesButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_margin="26dp"
        app:backgroundTint="@color/green"
        app:srcCompat="@drawable/ic_baseline_done_24" />
</RelativeLayout>