<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray"
    tools:context=".Activity.MainActivity">

    <LinearLayout
        android:id="@+id/filterLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="5dp"><!--
        android:gravity="center_horizontal"-->

        <ImageView
            android:id="@+id/filterIdentifyer"
            android:layout_width="27dp"
            android:layout_height="27dp"
            android:layout_margin="5dp"
            android:background="@drawable/filter_back"
            android:gravity="center_vertical"
            android:padding="5dp"
            app:srcCompat="@drawable/ic_baseline_filter_list_24" />

        <TextView
            android:id="@+id/noFilterTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@drawable/filter_back"
            android:fontFamily="@font/product_sans_regular"
            android:gravity="center_vertical"
            android:paddingStart="10dp"
            android:paddingTop="5dp"
            android:paddingEnd="10dp"
            android:paddingBottom="5dp"
            android:text="@string/no_filter"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/highToLowFilterTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@drawable/filter_back_with_border"
            android:fontFamily="@font/product_sans_regular"
            android:gravity="center_vertical"
            android:paddingStart="10dp"
            android:paddingTop="5dp"
            android:paddingEnd="10dp"
            android:paddingBottom="5dp"
            android:text="@string/high_to_low"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/lowToHighFilterTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@drawable/filter_back"
            android:fontFamily="@font/product_sans_regular"
            android:gravity="center_vertical"
            android:paddingStart="10dp"
            android:paddingTop="5dp"
            android:paddingEnd="10dp"
            android:paddingBottom="5dp"
            android:text="@string/low_to_high"
            android:textColor="@color/black" />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/allNotesRecycler"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/filterLayout"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/addNoteButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="26dp"
        android:layout_marginLeft="26dp"
        android:layout_marginTop="26dp"
        android:layout_marginEnd="26dp"
        android:layout_marginRight="26dp"
        android:layout_marginBottom="26dp"
        app:backgroundTint="@color/red"
        app:srcCompat="@drawable/ic_baseline_add_24" />

</RelativeLayout>
